Added Markdown headers

--- a/EXPOSE.ipynb
+++ b/EXPOSE.ipynb
@@ -1,11 +1,29 @@
 {
  "cells": [
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "# EXPOSE: Data Science Tutorial\n",
+    "\n",
+    "### Topics:\n",
+    "* Exploratory data analysis (EDA)\n",
+    "* Data manipulation with Pandas\n",
+    "* Data visualisation with Matplotlib\n",
+    "* Model training with Scikit-learn\n",
+    "\n",
+    "### Tutorial TAs:\n",
+    "* Nicholas Russell Saerang (NUS)\n",
+    "* Wilson Widyadhana (NUS)"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": 10,
    "metadata": {},
    "outputs": [],
    "source": [
+    "# importing necessary packages\n",
     "from sklearn import datasets\n",
     "import pandas as pd\n",
     "import matplotlib.pyplot as plt\n",
@@ -18,10 +36,10 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "# suppressing warnings, do not remove\n",
+    "# suppressing warnings, DO NOT REMOVE\n",
     "def warn(*args, **kwargs):\n",
     "    pass\n",
-    "warnings.warn = warn\n"
+    "warnings.warn = warn"
    ]
   },
   {
