--- a/EXPOSE.ipynb
+++ b/EXPOSE.ipynb
@@ -18,6 +18,20 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "---\n",
+    "### Step 1: Importing necessary packages\n",
+    "In this step, we first import the packages essential to what we want to do today.\n",
+    "We will be importing:\n",
+    "* Scikit-learn (`sklearn`), which is a introductory Data Science package,\n",
+    "* Pandas (`pandas`, usually imported as `pd`), which is often used to manipulate data,\n",
+    "* Matplotlib (`matplotlib.pyplot`, usually imported as `plt`), used to visualise data,\n",
+    "* `warnings`, which will just be used in our case to prevent unnecessary warnings appearing in our Colab Notebook\n"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": 10,
    "metadata": {},
