Changed markdown descriptions

--- a/EXPOSE.ipynb
+++ b/EXPOSE.ipynb
@@ -4,7 +4,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "# EXPOSE: Data Science Tutorial\n",
+    "# EXPOSE: Data Analytics Tutorial\n",
     "\n",
     "### Topics:\n",
     "* Exploratory data analysis (EDA)\n",
@@ -25,7 +25,7 @@
     "### Step 1: Importing necessary packages\n",
     "In this step, we first import the packages essential to what we want to do today.\n",
     "We will be importing:\n",
-    "* Scikit-learn (`sklearn`), which is a introductory Data Science package,\n",
+    "* Scikit-learn (`sklearn`), which is an introductory data analytics package,\n",
     "* Pandas (`pandas`, usually imported as `pd`), which is often used to manipulate data,\n",
     "* Matplotlib (`matplotlib.pyplot`, usually imported as `plt`), used to visualise data,\n",
     "* `warnings`, which will just be used in our case to prevent unnecessary warnings appearing in our Colab Notebook\n"
@@ -33,7 +33,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -46,7 +46,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [],
    "source": [
