--- a/EXPOSE.ipynb
+++ b/EXPOSE.ipynb
@@ -13,8 +13,8 @@
     "* Model training with Scikit-learn\n",
     "\n",
     "### Tutorial TAs:\n",
-    "* Nicholas Russell Saerang (NUS)\n",
-    "* Wilson Widyadhana (NUS)"
+    "* Nicholas Russell Saerang (NUS, Y2 DSA)\n",
+    "* Wilson Widyadhana (NUS, Y1 DSA)"
    ]
   },
   {
@@ -22,13 +22,13 @@
    "metadata": {},
    "source": [
     "---\n",
-    "### Step 1: Importing necessary packages\n",
+    "### Step 0: Importing necessary packages\n",
     "In this step, we first import the packages essential to what we want to do today.\n",
     "We will be importing:\n",
-    "* Scikit-learn (`sklearn`), which is an introductory data analytics package,\n",
-    "* Pandas (`pandas`, usually imported as `pd`), which is often used to manipulate data,\n",
-    "* Matplotlib (`matplotlib.pyplot`, usually imported as `plt`), used to visualise data,\n",
-    "* `warnings`, which will just be used in our case to prevent unnecessary warnings appearing in our Colab Notebook\n"
+    "* [Scikit-lear](https://scikit-learn.org/) (`sklearn`), which is an introductory data analytics package,\n",
+    "* [Pandas](https://pandas.pydata.org/) (`pandas`, usually imported as `pd`), which is often used to manipulate data,\n",
+    "* [Matplotlib](https://matplotlib.org/) (`matplotlib.pyplot`, usually imported as `plt`), used to visualise data,\n",
+    "* `warnings`, which will just be used in our case to prevent unnecessary warnings appearing in our Google Colab notebook\n"
    ]
   },
   {
