--- a/EXPOSE.ipynb
+++ b/EXPOSE.ipynb
@@ -25,23 +25,10 @@
     "### Step 0: Importing necessary packages\n",
     "In this step, we first import the packages essential to what we want to do today.\n",
     "We will be importing:\n",
-    "* [Scikit-lear](https://scikit-learn.org/) (`sklearn`), which is an introductory data analytics package,\n",
+    "* [Scikit-learn](https://scikit-learn.org/) (`sklearn`), which is an introductory data analytics package,\n",
     "* [Pandas](https://pandas.pydata.org/) (`pandas`, usually imported as `pd`), which is often used to manipulate data,\n",
     "* [Matplotlib](https://matplotlib.org/) (`matplotlib.pyplot`, usually imported as `plt`), used to visualise data,\n",
-    "* `warnings`, which will just be used in our case to prevent unnecessary warnings appearing in our Google Colab notebook\n"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 1,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "# importing necessary packages\n",
-    "from sklearn import datasets\n",
-    "import pandas as pd\n",
-    "import matplotlib.pyplot as plt\n",
-    "import warnings"
+    "* `warnings`, which will just be used in our case to prevent unnecessary warnings appearing in our Google Colab notebook"
    ]
   },
   {
@@ -50,123 +37,366 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "# suppressing warnings, DO NOT REMOVE\n",
+    "# Importing necessary packages\n",
+    "from sklearn import datasets\n",
+    "import pandas as pd\n",
+    "import matplotlib.pyplot as plt\n",
+    "import warnings"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Next, we run this function that supresses future warnings. Do not remove this code, just run it."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 3,
+   "metadata": {},
+   "outputs": [],
+   "source": [
     "def warn(*args, **kwargs):\n",
     "    pass\n",
     "warnings.warn = warn"
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "---\n",
+    "### Step 1: Loading our dataset\n",
+    "We shall use the iris dataset from the `sklearn` package that we just imported recently.\n",
+    "\n",
+    "The iris dataset is a dataset consisting of iris flowers with different:\n",
+    "- sepal length (cm)\n",
+    "- sepal width (cm)\n",
+    "- petal length (cm)\n",
+    "- petal width (cm)\n",
+    "- the species of the flower - our dataset label\n",
+    "  * 0 means the species is *Iris setosa*\n",
+    "  * 1 means the species is *Iris versicolour*\n",
+    "  * 2 means the species is *Iris virginica*\n",
+    "\n",
+    "However, the labels are separated from the other four informations as shown below."
+   ]
+  },
+  {
    "cell_type": "code",
-   "execution_count": 23,
+   "execution_count": 4,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "iris = datasets.load_iris()\n",
+    "df = pd.DataFrame(iris.data, columns=iris.feature_names)\n",
+    "target = pd.DataFrame(iris.target)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "What the previous lines of code do is assigning our loaded dataset to a variable `iris`, and puts the measurements information and the label into two variables, `df` and `target`."
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Now let us extract the first five rows of the dataframe, `df`, using the `.head()` method."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 10,
    "metadata": {},
    "outputs": [
     {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      ".. _iris_dataset:\n",
-      "\n",
-      "Iris plants dataset\n",
-      "--------------------\n",
-      "\n",
-      "**Data Set Characteristics:**\n",
-      "\n",
-      "    :Number of Instances: 150 (50 in each of three classes)\n",
-      "    :Number of Attributes: 4 numeric, predictive attributes and the class\n",
-      "    :Attribute Information:\n",
-      "        - sepal length in cm\n",
-      "        - sepal width in cm\n",
-      "        - petal length in cm\n",
-      "        - petal width in cm\n",
-      "        - class:\n",
-      "                - Iris-Setosa\n",
-      "                - Iris-Versicolour\n",
-      "                - Iris-Virginica\n",
-      "                \n",
-      "    :Summary Statistics:\n",
-      "\n",
-      "    ============== ==== ==== ======= ===== ====================\n",
-      "                    Min  Max   Mean    SD   Class Correlation\n",
-      "    ============== ==== ==== ======= ===== ====================\n",
-      "    sepal length:   4.3  7.9   5.84   0.83    0.7826\n",
-      "    sepal width:    2.0  4.4   3.05   0.43   -0.4194\n",
-      "    petal length:   1.0  6.9   3.76   1.76    0.9490  (high!)\n",
-      "    petal width:    0.1  2.5   1.20   0.76    0.9565  (high!)\n",
-      "    ============== ==== ==== ======= ===== ====================\n",
-      "\n",
-      "    :Missing Attribute Values: None\n",
-      "    :Class Distribution: 33.3% for each of 3 classes.\n",
-      "    :Creator: R.A. Fisher\n",
-      "    :Donor: Michael Marshall (MARSHALL%PLU@io.arc.nasa.gov)\n",
-      "    :Date: July, 1988\n",
-      "\n",
-      "The famous Iris database, first used by Sir R.A. Fisher. The dataset is taken\n",
-      "from Fisher's paper. Note that it's the same as in R, but not as in the UCI\n",
-      "Machine Learning Repository, which has two wrong data points.\n",
-      "\n",
-      "This is perhaps the best known database to be found in the\n",
-      "pattern recognition literature.  Fisher's paper is a classic in the field and\n",
-      "is referenced frequently to this day.  (See Duda & Hart, for example.)  The\n",
-      "data set contains 3 classes of 50 instances each, where each class refers to a\n",
-      "type of iris plant.  One class is linearly separable from the other 2; the\n",
-      "latter are NOT linearly separable from each other.\n",
-      "\n",
-      ".. topic:: References\n",
-      "\n",
-      "   - Fisher, R.A. \"The use of multiple measurements in taxonomic problems\"\n",
-      "     Annual Eugenics, 7, Part II, 179-188 (1936); also in \"Contributions to\n",
-      "     Mathematical Statistics\" (John Wiley, NY, 1950).\n",
-      "   - Duda, R.O., & Hart, P.E. (1973) Pattern Classification and Scene Analysis.\n",
-      "     (Q327.D83) John Wiley & Sons.  ISBN 0-471-22361-1.  See page 218.\n",
-      "   - Dasarathy, B.V. (1980) \"Nosing Around the Neighborhood: A New System\n",
-      "     Structure and Classification Rule for Recognition in Partially Exposed\n",
-      "     Environments\".  IEEE Transactions on Pattern Analysis and Machine\n",
-      "     Intelligence, Vol. PAMI-2, No. 1, 67-71.\n",
-      "   - Gates, G.W. (1972) \"The Reduced Nearest Neighbor Rule\".  IEEE Transactions\n",
-      "     on Information Theory, May 1972, 431-433.\n",
-      "   - See also: 1988 MLC Proceedings, 54-64.  Cheeseman et al\"s AUTOCLASS II\n",
-      "     conceptual clustering system finds 3 classes in the data.\n",
-      "   - Many, many more ...\n",
-      "     sepal length (cm)  sepal width (cm)  petal length (cm)  petal width (cm)\n",
-      "0                  5.1               3.5                1.4               0.2\n",
-      "1                  4.9               3.0                1.4               0.2\n",
-      "2                  4.7               3.2                1.3               0.2\n",
-      "3                  4.6               3.1                1.5               0.2\n",
-      "4                  5.0               3.6                1.4               0.2\n",
-      "..                 ...               ...                ...               ...\n",
-      "145                6.7               3.0                5.2               2.3\n",
-      "146                6.3               2.5                5.0               1.9\n",
-      "147                6.5               3.0                5.2               2.0\n",
-      "148                6.2               3.4                5.4               2.3\n",
-      "149                5.9               3.0                5.1               1.8\n",
-      "\n",
-      "[150 rows x 4 columns]\n",
-      "     0\n",
-      "0    0\n",
-      "1    0\n",
-      "2    0\n",
-      "3    0\n",
-      "4    0\n",
-      "..  ..\n",
-      "145  2\n",
-      "146  2\n",
-      "147  2\n",
-      "148  2\n",
-      "149  2\n",
-      "\n",
-      "[150 rows x 1 columns]\n"
-     ]
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>sepal length (cm)</th>\n",
+       "      <th>sepal width (cm)</th>\n",
+       "      <th>petal length (cm)</th>\n",
+       "      <th>petal width (cm)</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>0</th>\n",
+       "      <td>5.1</td>\n",
+       "      <td>3.5</td>\n",
+       "      <td>1.4</td>\n",
+       "      <td>0.2</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1</th>\n",
+       "      <td>4.9</td>\n",
+       "      <td>3.0</td>\n",
+       "      <td>1.4</td>\n",
+       "      <td>0.2</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2</th>\n",
+       "      <td>4.7</td>\n",
+       "      <td>3.2</td>\n",
+       "      <td>1.3</td>\n",
+       "      <td>0.2</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>3</th>\n",
+       "      <td>4.6</td>\n",
+       "      <td>3.1</td>\n",
+       "      <td>1.5</td>\n",
+       "      <td>0.2</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>4</th>\n",
+       "      <td>5.0</td>\n",
+       "      <td>3.6</td>\n",
+       "      <td>1.4</td>\n",
+       "      <td>0.2</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "   sepal length (cm)  sepal width (cm)  petal length (cm)  petal width (cm)\n",
+       "0                5.1               3.5                1.4               0.2\n",
+       "1                4.9               3.0                1.4               0.2\n",
+       "2                4.7               3.2                1.3               0.2\n",
+       "3                4.6               3.1                1.5               0.2\n",
+       "4                5.0               3.6                1.4               0.2"
+      ]
+     },
+     "execution_count": 10,
+     "metadata": {},
+     "output_type": "execute_result"
     }
    ],
    "source": [
-    "\n",
-    "iris = datasets.load_iris()\n",
-    "df = pd.DataFrame(iris.data, columns = iris.feature_names)\n",
-    "y = pd.DataFrame(iris.target)\n",
-    "print(iris.DESCR)\n",
-    "print(df)\n",
-    "print(y)\n"
+    "df.head()"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "The purpose of this is to have a glimpse on the dataset without actually showing all the rows (it can be a lot of them!). If you want to show more/less rows, you can specify the number inside the brackets like this."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 14,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>sepal length (cm)</th>\n",
+       "      <th>sepal width (cm)</th>\n",
+       "      <th>petal length (cm)</th>\n",
+       "      <th>petal width (cm)</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>0</th>\n",
+       "      <td>5.1</td>\n",
+       "      <td>3.5</td>\n",
+       "      <td>1.4</td>\n",
+       "      <td>0.2</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1</th>\n",
+       "      <td>4.9</td>\n",
+       "      <td>3.0</td>\n",
+       "      <td>1.4</td>\n",
+       "      <td>0.2</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2</th>\n",
+       "      <td>4.7</td>\n",
+       "      <td>3.2</td>\n",
+       "      <td>1.3</td>\n",
+       "      <td>0.2</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>3</th>\n",
+       "      <td>4.6</td>\n",
+       "      <td>3.1</td>\n",
+       "      <td>1.5</td>\n",
+       "      <td>0.2</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>4</th>\n",
+       "      <td>5.0</td>\n",
+       "      <td>3.6</td>\n",
+       "      <td>1.4</td>\n",
+       "      <td>0.2</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>5</th>\n",
+       "      <td>5.4</td>\n",
+       "      <td>3.9</td>\n",
+       "      <td>1.7</td>\n",
+       "      <td>0.4</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>6</th>\n",
+       "      <td>4.6</td>\n",
+       "      <td>3.4</td>\n",
+       "      <td>1.4</td>\n",
+       "      <td>0.3</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>7</th>\n",
+       "      <td>5.0</td>\n",
+       "      <td>3.4</td>\n",
+       "      <td>1.5</td>\n",
+       "      <td>0.2</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "   sepal length (cm)  sepal width (cm)  petal length (cm)  petal width (cm)\n",
+       "0                5.1               3.5                1.4               0.2\n",
+       "1                4.9               3.0                1.4               0.2\n",
+       "2                4.7               3.2                1.3               0.2\n",
+       "3                4.6               3.1                1.5               0.2\n",
+       "4                5.0               3.6                1.4               0.2\n",
+       "5                5.4               3.9                1.7               0.4\n",
+       "6                4.6               3.4                1.4               0.3\n",
+       "7                5.0               3.4                1.5               0.2"
+      ]
+     },
+     "execution_count": 14,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "# Showing the first 8 rows\n",
+    "df.head(8)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Next, to find the number of rows and columns a dataframe has, use the `shape` attribute as shown below."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 15,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "(150, 4)"
+      ]
+     },
+     "execution_count": 15,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "df.shape"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "This means the dataframe has 150 rows and 4 columns."
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "---\n",
+    "### Step 2: Querying the dataframe\n",
+    "Given our current dataframe `df`, we can try to perform some queries and data manipulations on it."
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "1. Extract the second column of the dataframe.\n",
+    "2. How many flowers have a sepal length of less than 5.6 cm?\n",
+    "3. How many flowers with a sepal length between 5-6 cm and petal length between 1.4-1.6 cm?\n",
+    "4. How to obtain second column of the dataframe but this time they are measured in millimetres, i.e. multiply all values in that column by 10.\n",
+    "5. Join the `target` dataframe into `df`.\n",
+    "6. Rename the columns into \"sepal_length\", \"sepal_width\", \"petal_length\", \"petal_width\", and \"label\"."
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Our final processed dataset should be like this."
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "---\n",
+    "### Step 3: Data visualization"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# TODO"
    ]
   }
  ],
@@ -189,7 +419,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.10.0"
+   "version": "3.9.9"
   },
   "orig_nbformat": 4
  },
