Modified markdown for step 2

--- a/EXPOSE.ipynb
+++ b/EXPOSE.ipynb
@@ -360,20 +360,92 @@
    "source": [
     "---\n",
     "### Step 2: Querying the dataframe\n",
-    "Given our current dataframe `df`, we can try to perform some queries and data manipulations on it."
+    "Given our current dataframe `df`, we can try to perform queries and different data manipulations on it."
    ]
   },
   {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "1. Extract the second column of the dataframe.\n",
-    "2. How many flowers have a sepal length of less than 5.6 cm?\n",
-    "3. How many flowers with a sepal length between 5-6 cm and petal length between 1.4-1.6 cm?\n",
-    "4. How to obtain second column of the dataframe but this time they are measured in millimetres, i.e. multiply all values in that column by 10.\n",
-    "5. Join the `target` dataframe into `df`.\n",
-    "6. Rename the columns into \"sepal_length\", \"sepal_width\", \"petal_length\", \"petal_width\", and \"label\"."
+    "Extract the column corresponding to the sepal length. This will be used in a later step."
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "How many flowers in the dataset have a sepal length of less than 5.6cm?"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "How many flowers have a sepal length of between 5-6cm **AND** petal length between 1.4-1.6cm?"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "How to obtain the first column with values now in **millimetres**?"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Join the `target` dataframe into `df`."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Rename the columns into \"sepal_length\", \"sepal_width\", \"petal_length\", \"petal_width\", and \"label\"."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
   },
   {
    "cell_type": "markdown",
@@ -387,7 +459,15 @@
    "metadata": {},
    "source": [
     "---\n",
-    "### Step 3: Data visualization"
+    "### Step 3: Data visualization\n",
+    "Data visualisation enables us to see patterns that are otherwise difficult to observe from just raw data, which is critical for drawing insights and conclusions from the data.\n",
+    "\n",
+    "There are several types of visualisations that we can do, including:\n",
+    "* Scatter plots\n",
+    "* Bar charts\n",
+    "* Box plots\n",
+    "* Histograms\n",
+    "* Line plots"
    ]
   },
   {
@@ -396,7 +476,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "# TODO"
+    "# TODO\n"
    ]
   }
  ],
