Updated TODO for step 1

--- a/EXPOSE.ipynb
+++ b/EXPOSE.ipynb
@@ -82,6 +82,8 @@
     "target = pd.DataFrame(iris.target)\n",
     "\n",
     "# Join both\n",
+    "\n",
+    "# TODO\n",
     "df = df.join(target)\n",
     "\n",
     "# Rename columns\n",
@@ -115,6 +117,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
+    "# TODO\n",
     "df.head()"
    ]
   },
@@ -122,7 +125,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "The purpose of this is to have a glimpse on the dataset without actually showing all the rows (it can be a lot of them!). If you want to show more/less rows, you can specify the number inside the brackets like this."
+    "The purpose of this is to have a glimpse on the dataset without actually showing all the rows (it can be a lot of them!). If you want to show more/less rows, you can put a number inside the brackets to specify the number of rows you want (so you'll type something like `df.head(<number>)`)."
    ]
   },
   {
@@ -132,6 +135,8 @@
    "outputs": [],
    "source": [
     "# Showing the first 8 rows\n",
+    "\n",
+    "# TODO\n",
     "df.head(8)"
    ]
   },
@@ -148,6 +153,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
+    "# TODO\n",
     "df.shape"
    ]
   },
