Final material updates

--- a/EXPOSE_Participant_Copy.ipynb
+++ b/EXPOSE_Participant_Copy.ipynb
@@ -21,7 +21,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "---\n",
+    "----\n",
     "### Step 0: Importing necessary packages\n",
     "In this step, we first import the packages essential to what we want to do today.\n",
     "We will be importing:\n",
@@ -53,7 +53,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "---\n",
+    "----\n",
     "### Step 1: Loading our dataset\n",
     "We shall use the iris dataset from the `sklearn` package that we just imported recently.\n",
     "\n",
@@ -84,7 +84,7 @@
     "# Join both\n",
     "\n",
     "# TODO\n",
-    "df = df.join(target)\n",
+    "\n",
     "\n",
     "# Rename columns\n",
     "mapper = {\n",
@@ -101,7 +101,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "What the previous lines of code do is assigning our loaded dataset to a variable `iris`, and puts the measurements information and the label into two variables, `df` and `target`. The code then joins both information into `df` as one unity. Finally, some columns are renamed so the data is tidy for you to use now."
+    "What the previous lines of code do is assigning our loaded dataset to a variable `iris`, and puts the measurements information and the label into two variables, `df` and `target`. The TODO portion joins the two datasets assigned to `df` and `iris` back into `df`."
    ]
   },
   {
@@ -117,8 +117,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "# TODO\n",
-    "df.head()"
+    "# TODO\n"
    ]
   },
   {
@@ -136,8 +135,7 @@
    "source": [
     "# Showing the first 8 rows\n",
     "\n",
-    "# TODO\n",
-    "df.head(8)"
+    "# TODO\n"
    ]
   },
   {
@@ -153,8 +151,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "# TODO\n",
-    "df.shape"
+    "# TODO\n"
    ]
   },
   {
@@ -168,7 +165,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "---\n",
+    "----\n",
     "### Step 2: Querying the dataframe\n",
     "Given our current dataframe `df`, we can try to perform queries and different data manipulations on it."
    ]
@@ -312,7 +309,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "---\n",
+    "----\n",
     "### Step 3: Data visualization\n",
     "Data visualisation enables us to see patterns that are otherwise difficult to observe from just raw data, which is critical for drawing insights and conclusions from the data.\n",
     "\n",
@@ -330,7 +327,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "**(SANITY CHECK)** Before we start, make sure your dataframe `df` is the one we have modified on the previous parts."
+    "**(SANITY CHECK)** Before we start, we make sure our dataframe `df` is the one we have modified on the previous parts by using `head()`."
    ]
   },
   {
@@ -339,7 +336,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "df.head()"
+    "# TODO\n"
    ]
   },
   {
@@ -567,7 +564,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "---\n",
+    "----\n",
     "### Step 4: Wrapping up\n",
     "You have learned the very basics of data manipulation and data visualization. Pat on the back!\n",
     "If you are interested to see more from Matplotlib and Pandas, take a look at https://matplotlib.org/ and https://pandas.pydata.org/ directly!\n",
