--- a/EXPOSE_Participant_Copy.ipynb
+++ b/EXPOSE_Participant_Copy.ipynb
@@ -101,7 +101,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "What the previous lines of code do is assigning our loaded dataset to a variable `iris`, and puts the measurements information and the label into two variables, `df` and `target`. The TODO portion joins the two datasets assigned to `df` and `iris` back into `df`."
+    "What the previous lines of code do is assigning our loaded dataset to a variable `iris`, and puts the measurements information and the label into two variables, `df` and `target`. The TODO portion joins the two datasets assigned to `df` and `iris` back into `df`. Finally, the columns are renamed to provide more clarity and tidiness."
    ]
   },
   {
@@ -158,7 +158,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "This means the dataframe has 150 rows and 4 columns."
+    "This means the dataframe has 150 rows and 5 columns."
    ]
   },
   {
